# magma_db

./: CMakeLists.txt  Cargo.toml  DownloadProject.cmake  README.md  test.db
src/: btree.rs  lib.rs  main.cpp  main.rs
src/core/: Document.cpp  Document.h  DocumentValue.cpp  DocumentValue.h  UUID.cpp  UUID.h
src/storage_engine/: mod.rs
src/storage_engine/btree/: constants.rs  helpers.rs  mod.rs  node.rs  operations.rs
src/storage_engine/connection/: mod.rs
src/storage_engine/pager/: constants.rs  db_header.rs  mod.rs
